--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -12,10 +12,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@expo/config": "^8.0.2",
     "@expo/next-adapter": "^4.0.12",
     "app": "*",
     "next": "13.0.1",
-    "raf": "^3.4.1"
+    "raf": "^3.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
@@ -23,6 +26,6 @@
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.4",
-    "next-transpile-modules": "10.0.0"
+    "next-transpile-modules": "^10.0.0"
   }
 }
