--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,168 @@
+absl-py==1.4.0
+aiofiles==23.1.0
+altair==4.2.2
+asttokens==2.2.1
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==22.2.0
+backcall==0.2.0
+benepar==0.1.3
 blinker==1.6.2
+blis==0.7.9
+cachetools==5.3.0
+catalogue==2.0.8
+certifi==2022.12.7
+chardet==3.0.4
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
+comm==0.1.2
+confection==0.0.4
+contourpy==1.0.7
+cycler==0.11.0
+cymem==2.0.7
+Cython==0.29.33
+debugpy==1.6.6
+decorator==5.1.1
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==1.2.0
+fastjsonschema==2.16.2
 Flask==2.3.2
 Flask-Cors==4.0.0
+flatbuffers==23.1.21
+fonttools==4.38.0
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.30
+google-auth==2.16.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.51.1
+h11==0.8.1
+h2==3.2.0
+h5py==3.8.0
+hpack==3.0.0
+httpcore==0.3.0
+httptools==0.6.0
+hyperframe==5.2.0
+idna==2.10
+importlib-metadata==6.0.0
+ipykernel==6.21.1
+ipython==8.9.0
 itsdangerous==2.1.2
+jax==0.4.4
+jedi==0.18.2
 Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+jupyter_client==8.0.2
+jupyter_core==5.2.0
+keras==2.12.0rc0
+kiwisolver==1.4.4
+langcodes==3.3.0
+libclang==15.0.6.1
+Markdown==3.4.1
+markdown-it-py==2.1.0
 MarkupSafe==2.1.3
-Werkzeug==2.3.6
+matplotlib==3.6.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+multidict==4.7.6
+murmurhash==1.0.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+networkx==3.0
+nltk==3.8.1
+numpy==1.23.5
+oauthlib==3.2.2
+openai==0.25.0
+openpyxl==3.0.10
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.5.2
+pandas-stubs==1.5.2.221213
+parso==0.8.3
+pathy==0.10.1
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==2.6.2
+plotly==5.13.0
+preshed==3.0.8
+prompt-toolkit==3.0.36
+protobuf==3.20.3
+psutil==5.9.4
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pydantic==1.10.5
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+pyparsing==3.0.9
+PyPDF2==2.12.1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+python-slugify==8.0.1
+pytz==2022.7
+pytz-deprecation-shim==0.1.0.post0
+pywin32==305
+pyzmq==25.0.0
+redis==4.3.5
+regex==2022.10.31
+requests==2.28.1
+requests-async==0.5.0
+requests-oauthlib==1.3.1
+rfc3986==1.5.0
+rich==13.3.1
+rsa==4.9
 sanic==19.6.0
+scipy==1.10.0
+semver==2.13.0
+simplejson==3.18.0
+six==1.16.0
+slugify==0.0.1
+smart-open==6.3.0
+smmap==5.0.0
+social_interaction_cloud==1.0.9
+spacy==3.5.0
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+SpeechRecognition==3.9.0
+srsly==2.4.5
+stack-data==0.6.2
+streamlit==1.17.0
+tenacity==8.1.0
+tensorboard==2.12.0
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0rc0
+tensorflow-estimator==2.12.0rc0
+tensorflow-intel==2.12.0rc0
+tensorflow-io-gcs-filesystem==0.30.0
+termcolor==2.2.0
+text-unidecode==1.3
+thinc==8.1.7
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.9.0
+typer==0.7.0
+types-pytz==2022.7.0.0
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.13
+validators==0.20.0
+wasabi==1.1.1
+watchdog==3.0.0
+wcwidth==0.2.6
+websockets==6.0
+Werkzeug==2.3.6
+wrapt==1.14.1
+zipp==3.12.0
