--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "concurrently": "^8.2.0",
     "eslint": "8.44.0",
